# evol-system

./: .gitignore  AGENTS.md  AGENT_MEMORY.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  NOTICE  PROMPT.md  README.md  SECURITY.md  WORKING-CONTEXT.md  agent.yaml  evol.config.yml  evol.profile.yml  hatch_build.py  install.sh  lecciones.md  memoria.md  package.json  pyproject.toml
.agent/hooks/: hooks.json
.agent/workflows/: a11y-audit.md  adr-new.md  advanced-agentic-pentesting.md  analisis-impacto.md  analyst.md  analytics-instrument.md  api-contract.md  api-versioning.md  brainstorm.md  briefing.md  ci-cd-setup.md  cierre-fase.md  clarify.md  code-as-tool.md  contract-test.md  crear-skill.md  cross-validate.md  data-pipeline.md  data.md  db-migrate.md  debt-budget.md  dependency-update.md  deploy-prod.md  design-system-builder.md  doc-granular.md  doc.md  dr-drill.md  event-sourcing.md  evol-auditor.md  evol-compliance-auditor.md  evol-historias.md  evol-profile.md  evol-sprint.md  evol-update-project.md  evol-update.md  evol.md  evolve.md  fase-requisitos.md  feature-flag.md  finops-baseline.md  (+41 more)
.github/workflows/: ci.yml
acuerdos/lecciones/: INDEX.md  sprint-27.md
acuerdos/memoria/: INDEX.json  MEMORY.json  MEMORY.md  convenciones.json  convenciones.md  decisiones.json  decisiones.md  riesgos.json  riesgos.md  sprint-27.json  sprint-27.md
api/: README.md
assets/: README.md
design/: README.md
docs/: CONFIG.md  DOC_STANDARD.json  DOC_STANDARD.md  GATE.json  GATE.md  IDE_SETUP.md  INDEX.json  README.md  RETROFIT_GUIDE.md  SECURITY_PERMISSIONS.md  X-DD_Integration_Guide.md  constitucion.json  constitucion.md  edms-ui-STACK.md  equipo.md  evol-dd_Integration_Guide.json  evol-dd_Integration_Guide.md  gitnexus-optin.md  modos.md  plan-implementacion-edms.json
docs/api/: API_GUIDE.md  openapi.yaml
docs/arquitectura/: ARQUITECTURA.json  ARQUITECTURA.md  DECISIONES.json  DECISIONES.md  DOMINIO.json  DOMINIO.md  INDEX.json
docs/diagramas/: INDEX.json  componentes.json  componentes.md  despliegue.json  despliegue.md  flujo-datos.json  flujo-datos.md
docs/disciplinas/: A11yDD.json  A11yDD.md  ADD.json  ADD.md  APIVDD.json  APIVDD.md  ATDD.json  ATDD.md  BDD.json  BDD.md  CCDD.json  CCDD.md  CDCDD.json  CDCDD.md  CHAOS.json  CHAOS.md  COMPLIANCE.json  COMPLIANCE.md  DDD.json  DDD.md  DebtBudgetDD.json  DebtBudgetDD.md  DeprecationDD.json  DeprecationDD.md  EDA.json  EDA.md  ESDD.json  ESDD.md  FDD.json  FDD.md  INDEX.json  INDEX.md  IODD.json  IODD.md  MDD.json  MDD.md  ODD_API.json  ODD_API.md  ODD_OBS.json  ODD_OBS.md  (+24 more)
docs/domain/: INDEX.json  INDEX.md  UBIQUITOUS_LANGUAGE.json  UBIQUITOUS_LANGUAGE.md
docs/features/: INDEX.json  INDEX.md
docs/guias/: CONTRIBUCION.json  CONTRIBUCION.md  INDEX.json  ONBOARDING.json  ONBOARDING.md  TROUBLESHOOTING.json  TROUBLESHOOTING.md
docs/operaciones/: DR_PLAN.json  DR_PLAN.md  INDEX.json  MONITORING.json  MONITORING.md  RELEASE_PROCESS.json  RELEASE_PROCESS.md  RUNBOOK.json  RUNBOOK.md  TAG_STRATEGY.json  TAG_STRATEGY.md  UPGRADE_GUIDE.json  UPGRADE_GUIDE.md
docs/privacy/: INDEX.json  INDEX.md
docs/profiles/: INDEX.json  README.json  README.md
docs/qa/: CASOS_BORDE.json  CASOS_BORDE.md  CASOS_GHERKIN.json  CASOS_GHERKIN.md  CHECKLIST_RELEASE.json  CHECKLIST_RELEASE.md  INDEX.json  MATRIZ_TRAZABILIDAD.json  MATRIZ_TRAZABILIDAD.md  PLAN_QA.json  PLAN_QA.md  REPORTE_QA.json  REPORTE_QA.md
docs/requisitos/: FUNCIONALES.json  FUNCIONALES.md  GLOSARIO.json  GLOSARIO.md  INDEX.json  NO_FUNCIONALES.json  NO_FUNCIONALES.md  RESTRICCIONES.json  RESTRICCIONES.md
docs/seguridad/: INDEX.json  PRIVACY.json  PRIVACY.md  SECURITY_CONTROLS.json  SECURITY_CONTROLS.md  THREATS.json  THREATS.md  analysis-guidance.json  analysis-guidance.md  exploit-guidance.json  exploit-guidance.md
docs/usuario/: FAQ.json  FAQ.md  INDEX.json  MANUAL_USUARIO.json  MANUAL_USUARIO.md
docs/wireframes/: index.html
evals/agent-eval/: cases.jsonl  grader.yaml
evals/evol-ai-review/: cases.jsonl  grader.yaml
evals/evol-compact/: cases.jsonl  grader.yaml
evals/evol-fs-context/: cases.jsonl  grader.yaml
evals/evol-sandbox/: cases.jsonl  grader.yaml
evals/evol-skill-manager/: cases.jsonl  grader.yaml
evals/evol-talk-compact/: cases.jsonl  grader.yaml
idea/: README.md
manifests/: install-modules.json  install-profiles.json  workflow-profiles.json
prompts/agents/: registry.json  registry.schema.json
schemas/: agent-manifest.schema.json
scripts/: _evol_common.py  _generate_equipo.py  bump-version.py  evol-adapt.sh  evol-agent-lifecycle.py  evol-brand.sh  evol-compliance.py  evol-discipline-check.py  evol-doc-sync.py  evol-doctor.sh  evol-eval.py  evol-evolve.py  evol-gate.py  evol-gitflow.sh  evol-global-install.sh  evol-init.sh  evol-lessons.py  evol-mcp.sh  evol-memory.py  evol-orchestrate.py  evol-profile.py  evol-provider.py  evol-researcher.py  evol-security-inventory.py  evol-shield.py  evol-start.sh  evol-state.py  evol-update.py  evol_memory_store.py  generate-catalog.py  generate-equipo.sh  lint-workflows.sh  validate-disciplinas.py  validate-registry.py
scripts/evol_memory_v2/: __init__.py  agent_file.py  api.py  auto_linker.py  bm25_retriever.py  compat.py  conflict_detector.py  dreaming.py  entity_store.py  evidence.py  extractor.py  forgetting.py  graph_expander.py  hybrid_retriever.py  migrate.py  reflection.py  relational.py  store.py
skills/: CATALOG.json  CATALOG.md
skills/agent-eval/: SKILL.md
skills/code-indexer/: SKILL.md
src/: README.md
templates/: AGENT_MEMORY.template.md  evol-dd.PROMPT.template.md  gitignore.template  lecciones.template.md  memoria.template.md  working-context.template.md
tests/: README.md  test_adapt_trigger_sanitization.bats  test_compliance.py  test_discipline_check.py  test_doc_sync.py  test_gate.py  test_gate_fsm.py  test_gate_grill_enforce.py  test_gitflow.bats  test_init_idempotent.bats  test_lessons.py  test_memory.py  test_memory_sprint.py  test_memory_store.py  test_openapi_merge.py  test_security_inventory.py  test_state.py
(+365 files in other folders)
