[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evol-dd"
version = "0.1.0-dev"
description = "El framework que evoluciona."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Evol-DD Team"}
]
requires-python = ">=3.10"
keywords = ["agents", "development", "framework", "ai", "dd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "jsonschema>=4.0.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
evol = "evol_cli:main"
evol-gate = "evol_cli:gate"
evol-eval = "evol_cli:eval_"
evol-flow = "evol_cli:flow"
evol-provider = "evol_cli:provider"
evol-shield = "evol_cli:shield"
evol-orchestrate = "evol_cli:orchestrate"
evol-agent = "evol_cli:agent"
evol-evolve = "evol_cli:evolve"
evol-research = "evol_cli:research"
evol-memory = "evol_cli:memory"
evol-lessons = "evol_cli:lessons"
evol-profile = "evol_cli:profile"

[project.urls]
Homepage = "https://github.com/Cucholambr3ta/evol-system"
Documentation = "https://github.com/Cucholambr3ta/evol-system#readme"

[tool.setuptools.packages.find]
where = ["src"]

# Empaquetar TODOS los data dirs dentro del paquete instalado.
# Sin esto, evol --version reporta "0.1.0-dev" (stale) y evol init --list-profiles
# falla con "manifest no disponible" — bug identico al de X-DD pre-fix (ADR-0048).
# Los scripts bash reciben EVOL_DATA_DIR inyectado por _run_shell() en evol_cli.
[tool.setuptools.package-data]
"*" = [
    "*.md", "*.json", "*.yml", "*.yaml", "*.sh", "*.schema.json",
    "*.py", "*.txt",
]

# MANIFEST.in para sdist — garantiza que los data dirs llegan al wheel
# via SOURCES.txt. setuptools los copia a evol_cli/<dir> por la config abajo.
[tool.setuptools.data-files]
"evol_cli/scripts"   = ["scripts/*.py", "scripts/*.sh"]
"evol_cli/manifests" = ["manifests/*.json"]
"evol_cli/templates" = ["templates/*.md", "templates/*.yml", "templates/*.yaml", "templates/*.template"]
"evol_cli/agent"     = [".agent/workflows/*.md", ".agent/hooks/hooks.json"]
"evol_cli/docs"      = ["docs/*.md"]
"evol_cli"           = ["VERSION"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]