[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evol-dd"
version = "0.1.9"
description = "El framework que evoluciona."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Evol-DD Team"}
]
requires-python = ">=3.10"
keywords = ["agents", "development", "framework", "ai", "dd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "jsonschema>=4.0.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
evol = "evol_cli:main"
evol-gate = "evol_cli:gate"
evol-eval = "evol_cli:eval_"
evol-flow = "evol_cli:flow"
evol-provider = "evol_cli:provider"
evol-shield = "evol_cli:shield"
evol-orchestrate = "evol_cli:orchestrate"
evol-agent = "evol_cli:agent"
evol-evolve = "evol_cli:evolve"
evol-research = "evol_cli:research"
evol-memory = "evol_cli:memory"
evol-lessons = "evol_cli:lessons"
evol-profile = "evol_cli:profile"
evol-install-global = "evol_cli:install_global"

[project.urls]
Homepage = "https://github.com/Cucholambr3ta/evol-system"
Documentation = "https://github.com/Cucholambr3ta/evol-system#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/evol_cli"]

# Data dirs viven dentro de src/evol_cli/ — incluidos automaticamente por hatchling.
# _data_dir() en evol_cli/__init__.py los encuentra en 3 niveles:
#   1. EVOL_DATA_DIR env var
#   2. instalacion editable: repo_root/ (scripts/, manifests/, etc.)
#   3. wheel instalado: <site-packages>/evol_cli/<dir>

[tool.hatch.build.targets.wheel.shared-data]
"src/evol_cli/scripts"   = "evol_cli/scripts"
"src/evol_cli/manifests" = "evol_cli/manifests"
"src/evol_cli/templates" = "evol_cli/templates"
"src/evol_cli/skills"    = "evol_cli/skills"
"src/evol_cli/agent"     = "evol_cli/agent"
"src/evol_cli/docs"      = "evol_cli/docs"
"src/evol_cli/VERSION"   = "evol_cli/VERSION"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]